--- a/app/src/main/res/values-pl-rPL/strings.xml
+++ b/app/src/main/res/values-pl-rPL/strings.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Skill Market</string>
-    <string name="sign_in_login_text">Sign in</string>
-    <string name="sign_in_sign_up_text">Sign up</string>
-    <string name="sign_in_remember_me_text">Remember me.</string>
-    <string name="sign_up_full_name_text">Full name</string>
-    <string name="sign_up_email_text">Email</string>
-    <string name="sign_up_password_text">Password</string>
-    <string name="sign_up_create_account_text">Create account</string>
-    <string name="sign_up_have_account_text"><u>Already have an account? Sign in</u></string>
+    <string name="sign_in_login_text">Zaloguj się</string>
+    <string name="sign_in_sign_up_text">Zarejestruj się</string>
+    <string name="sign_in_remember_me_text">Zapamiętaj mnie.</string>
+    <string name="sign_up_full_name_text">Imię i nazwisko</string>
+    <string name="sign_up_email_text">Adres e-mail</string>
+    <string name="sign_up_password_text">Hasło</string>
+    <string name="sign_up_create_account_text">Stwórz konto</string>
+    <string name="sign_up_have_account_text"><u>Masz już konto? Zaloguj się.</u></string>
+    <string name="sign_up_phone_number">Numer telefonu</string>
+    <string name="sign_up_city">Miejscowość</string>
+    <string name="sign_up_address">Nazwa i numer ulicy</string>
 </resources>
