--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,13 +16,21 @@
     <string name="sign_up_city">City</string>
     <string name="sign_up_address">Address</string>
     <string name="title_activity_user_profile">UserProfile</string>
-    <string name="sign_up_no_white_spaces">Don\'t use spaces</string>
-    <string name="sign_up_wrong_full_name">Add your last name</string>
-    <string name="sign_up_wrong_email">Email is not valid</string>
-    <string name="sign_up_wrong_password">Min 8 characters</string>
-    <string name="sign_up_not_empty">This field is required</string>
+    <string name="info_message_no_white_spaces">Don\'t use spaces</string>
+    <string name="info_message_wrong_full_name">Add your last name</string>
+    <string name="info_message_wrong_email">Email is not valid</string>
+    <string name="info_message_wrong_password">Min 8 characters</string>
+    <string name="info_message_not_empty">This field is required</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="error_message_uknown">Unknown error occurred</string>
+    <string name="success_message_signed_up">Your account was successfully registered. You can sign in now.</string>
+    <string name="info_message_signing_up">Signing you up!</string>
+    <string name="error_message_email_taken">Email is already taken</string>
+    <string name="error_message_nickname_taken">Nickname is already taken</string>
+    <string name="success_message">Success</string>
+    <string name="failure_message">Failure :(</string>
+    <string name="info_message_wait">Wait a second...</string>
 </resources>
